--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -4475,6 +4475,317 @@
    "cell_type": "markdown",
    "id": "6d1cfe17",
    "metadata": {},
+   "source": [
+    "## Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77bc3868",
+   "metadata": {},
+   "source": [
+    "### Getitem ([]) passing a single label selects a columns and yields a Series equivalent to df.A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1a1c0ac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2.0\n",
+       "1         2.0\n",
+       "2         2.0\n",
+       "3         2.0\n",
+       "4         2.0\n",
+       "         ... \n",
+       "884087    0.0\n",
+       "884088    0.0\n",
+       "884089    0.0\n",
+       "884090    0.0\n",
+       "884091    0.0\n",
+       "Name: bus, Length: 884092, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['bus']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7665273",
+   "metadata": {},
+   "source": [
+    "### passing a slice : selects matching rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f14b9bc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>median_sale_price</th>\n",
+       "      <th>median_list_price</th>\n",
+       "      <th>median_ppsf</th>\n",
+       "      <th>median_list_ppsf</th>\n",
+       "      <th>homes_sold</th>\n",
+       "      <th>pending_sales</th>\n",
+       "      <th>new_listings</th>\n",
+       "      <th>inventory</th>\n",
+       "      <th>median_dom</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Total Housing Units</th>\n",
+       "      <th>Median Rent</th>\n",
+       "      <th>Median Home Value</th>\n",
+       "      <th>Total Labor Force</th>\n",
+       "      <th>Unemployed Population</th>\n",
+       "      <th>Total School Age Population</th>\n",
+       "      <th>Total School Enrollment</th>\n",
+       "      <th>Median Commute Time</th>\n",
+       "      <th>price</th>\n",
+       "      <th>city_full</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012-03-31</td>\n",
+       "      <td>46550.0</td>\n",
+       "      <td>217450.0</td>\n",
+       "      <td>31.813674</td>\n",
+       "      <td>110.183666</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>59.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2677.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>279500.0</td>\n",
+       "      <td>3171.0</td>\n",
+       "      <td>460.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>2492.0</td>\n",
+       "      <td>200773.999557</td>\n",
+       "      <td>Atlanta-Sandy Springs-Alpharetta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012-04-30</td>\n",
+       "      <td>61870.0</td>\n",
+       "      <td>245000.0</td>\n",
+       "      <td>40.723982</td>\n",
+       "      <td>130.528256</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>89.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2677.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>279500.0</td>\n",
+       "      <td>3171.0</td>\n",
+       "      <td>460.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>2492.0</td>\n",
+       "      <td>202421.064584</td>\n",
+       "      <td>Atlanta-Sandy Springs-Alpharetta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012-05-31</td>\n",
+       "      <td>125500.0</td>\n",
+       "      <td>217450.0</td>\n",
+       "      <td>63.913043</td>\n",
+       "      <td>119.919216</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>144.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2677.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>279500.0</td>\n",
+       "      <td>3171.0</td>\n",
+       "      <td>460.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>2492.0</td>\n",
+       "      <td>202681.309539</td>\n",
+       "      <td>Atlanta-Sandy Springs-Alpharetta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012-06-30</td>\n",
+       "      <td>153000.0</td>\n",
+       "      <td>189900.0</td>\n",
+       "      <td>81.598080</td>\n",
+       "      <td>105.617353</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2677.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>279500.0</td>\n",
+       "      <td>3171.0</td>\n",
+       "      <td>460.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>5408.0</td>\n",
+       "      <td>2492.0</td>\n",
+       "      <td>202998.603897</td>\n",
+       "      <td>Atlanta-Sandy Springs-Alpharetta</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  median_sale_price  median_list_price  median_ppsf  \\\n",
+       "0  2012-03-31            46550.0           217450.0    31.813674   \n",
+       "1  2012-04-30            61870.0           245000.0    40.723982   \n",
+       "2  2012-05-31           125500.0           217450.0    63.913043   \n",
+       "3  2012-06-30           153000.0           189900.0    81.598080   \n",
+       "\n",
+       "   median_list_ppsf  homes_sold  pending_sales  new_listings  inventory  \\\n",
+       "0        110.183666        14.0           23.0          44.0       64.0   \n",
+       "1        130.528256        22.0           29.0          56.0       69.0   \n",
+       "2        119.919216        24.0           40.0          63.0       60.0   \n",
+       "3        105.617353        34.0           46.0          50.0       57.0   \n",
+       "\n",
+       "   median_dom  ...  Total Housing Units  Median Rent  Median Home Value  \\\n",
+       "0        59.5  ...               2677.0        710.0           279500.0   \n",
+       "1        89.5  ...               2677.0        710.0           279500.0   \n",
+       "2       144.5  ...               2677.0        710.0           279500.0   \n",
+       "3       126.0  ...               2677.0        710.0           279500.0   \n",
+       "\n",
+       "  Total Labor Force  Unemployed Population  Total School Age Population  \\\n",
+       "0            3171.0                  460.0                       5408.0   \n",
+       "1            3171.0                  460.0                       5408.0   \n",
+       "2            3171.0                  460.0                       5408.0   \n",
+       "3            3171.0                  460.0                       5408.0   \n",
+       "\n",
+       "   Total School Enrollment  Median Commute Time          price  \\\n",
+       "0                   5408.0               2492.0  200773.999557   \n",
+       "1                   5408.0               2492.0  202421.064584   \n",
+       "2                   5408.0               2492.0  202681.309539   \n",
+       "3                   5408.0               2492.0  202998.603897   \n",
+       "\n",
+       "                          city_full  \n",
+       "0  Atlanta-Sandy Springs-Alpharetta  \n",
+       "1  Atlanta-Sandy Springs-Alpharetta  \n",
+       "2  Atlanta-Sandy Springs-Alpharetta  \n",
+       "3  Atlanta-Sandy Springs-Alpharetta  \n",
+       "\n",
+       "[4 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#it return number of rows df[start:end]\n",
+    "df[0:4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2150549d",
+   "metadata": {},
+   "source": [
+    "### Selection by label Selecting a row matching a label:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2279bac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Median Rent'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mMedian Rent\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mmkb3\\OneDrive\\Desktop\\Sklearn Machine Learning\\.venv\\Lib\\site-packages\\pandas\\core\\indexing.py:1192\u001b[39m, in \u001b[36m_LocationIndexer.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   1190\u001b[39m maybe_callable = com.apply_if_callable(key, \u001b[38;5;28mself\u001b[39m.obj)\n\u001b[32m   1191\u001b[39m maybe_callable = \u001b[38;5;28mself\u001b[39m._check_deprecated_callable_usage(key, maybe_callable)\n\u001b[32m-> \u001b[39m\u001b[32m1192\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_getitem_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmaybe_callable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mmkb3\\OneDrive\\Desktop\\Sklearn Machine Learning\\.venv\\Lib\\site-packages\\pandas\\core\\indexing.py:1432\u001b[39m, in \u001b[36m_LocIndexer._getitem_axis\u001b[39m\u001b[34m(self, key, axis)\u001b[39m\n\u001b[32m   1430\u001b[39m \u001b[38;5;66;03m# fall thru to straight lookup\u001b[39;00m\n\u001b[32m   1431\u001b[39m \u001b[38;5;28mself\u001b[39m._validate_key(key, axis)\n\u001b[32m-> \u001b[39m\u001b[32m1432\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_label\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mmkb3\\OneDrive\\Desktop\\Sklearn Machine Learning\\.venv\\Lib\\site-packages\\pandas\\core\\indexing.py:1382\u001b[39m, in \u001b[36m_LocIndexer._get_label\u001b[39m\u001b[34m(self, label, axis)\u001b[39m\n\u001b[32m   1380\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_get_label\u001b[39m(\u001b[38;5;28mself\u001b[39m, label, axis: AxisInt):\n\u001b[32m   1381\u001b[39m     \u001b[38;5;66;03m# GH#5567 this will fail if the label is not present in the axis.\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1382\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mxs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mmkb3\\OneDrive\\Desktop\\Sklearn Machine Learning\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py:4323\u001b[39m, in \u001b[36mNDFrame.xs\u001b[39m\u001b[34m(self, key, axis, level, drop_level)\u001b[39m\n\u001b[32m   4321\u001b[39m             new_index = index[loc]\n\u001b[32m   4322\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4323\u001b[39m     loc = \u001b[43mindex\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4325\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(loc, np.ndarray):\n\u001b[32m   4326\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m loc.dtype == np.bool_:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mmkb3\\OneDrive\\Desktop\\Sklearn Machine Learning\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\range.py:417\u001b[39m, in \u001b[36mRangeIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m    415\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m    416\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Hashable):\n\u001b[32m--> \u001b[39m\u001b[32m417\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[32m    418\u001b[39m \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n\u001b[32m    419\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Median Rent'"
+     ]
+    }
+   ],
+   "source": [
+    "df.loc[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "127dbbba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4727737c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74bb6cb1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
